New YouTube filter based on Json API (no more using the java client)